--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,6 +122,7 @@ tonic-prost = { version = "0.14.2" }
 tonic-prost-build = { version = "0.14.2" }
 tower = { version = "0.5.2", features = ["timeout"] }
 tower-http = { version = "0.6.8", features = ["cors"] }
+ipnet = "2.11.0"
 
 # Serialization and Data Formats
 bytes = { version = "1.11.0", features = ["serde"] }
